# add_subdirectory(phonon)
add_subdirectory(qtcore)
# add_subdirectory(qtdeclarative)
add_subdirectory(qtgui)
add_subdirectory(qtwidgets)
add_subdirectory(qtdbus)
add_subdirectory(qtnetwork)
add_subdirectory(qtopengl)
# add_subdirectory(qtscript)
add_subdirectory(qtsql)
# add_subdirectory(qtsvg)
add_subdirectory(qttest)
# add_subdirectory(qtuitools)
add_subdirectory(qtwebkit)
add_subdirectory(qtwebkitwidgets)
add_subdirectory(qtxml)
# add_subdirectory(qtxmlpatterns)

message(STATUS "Build QtRuby... " ${QTRUBY_ENABLED})
